// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="cf-1f9r163"
>
  FormLabel
</label>
`;

exports[`should render 2`] = `
".cf-1f9r163 {
  font-size: 0.8666666666666667em;
  display: block;
  margin-bottom: 0.2em;
  color: #333
}"
`;

exports[`should render hidden 1`] = `
<label
  className="cf-1f1cr8o"
>
  FormLabel
</label>
`;

exports[`should render hidden 2`] = `
".cf-1f1cr8o {
  font-size: 0.8666666666666667em;
  display: none;
  margin-bottom: 0.2em;
  color: #333
}"
`;
